--- a/dist.ini
+++ b/dist.ini
@@ -2,13 +2,11 @@ name             = DBIx-Class-UnicornLogger
 author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
-version          = 0.001000
+version          = 0.001001
 
 [NextRelease]
 [@Git]
-[@Filter]
-bundle = @Basic
-remove = MetaYAML
+[@Basic]
 
 [MetaResources]
 repository.url = git://github.com/frioux/DBIx-Class-UnicornLogger.git
