switch to cpanfile

--- a/dist.ini
+++ b/dist.ini
@@ -7,21 +7,12 @@ version          = 0.001002
 [NextRelease]
 [@Git]
 [@Basic]
-
-[MetaResources]
-repository.url = git://github.com/frioux/DBIx-Class-UnicornLogger.git
-repository.web = http://github.com/frioux/DBIx-Class-UnicornLogger
-repository.type = git
+[GithubMeta]
+issues = 1
 
 [MetaJSON]
 [PodWeaver]
 [PkgVersion]
 [ReadmeFromPod]
 [PodSyntaxTests]
-
-[Prereqs]
-DBIx::Class         = 0.08127
-Moo                 = 0.091000
-Log::Sprintf        = 0.001001
-Log::Structured     = 0.001000
-Test::More          = 0.98
+[Prereqs::FromCPANfile]
